...
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/transparent"
            android:cursorVisible="true"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/fname_edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/transparent"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:nextFocusForward="@+id/lname_edittext"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="16sp"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
...
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <!--<com.toptoche.searchablespinnerlibrary.SearchableSpinner-->
        <!--android:id="@+id/spinner_code"-->
        <!--android:layout_width="60dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginRight="16dp"-->
        <!--android:background="@android:color/transparent"-->
        <!--android:drawSelectorOnTop="true"-->
...
            android:id="@+id/countrycoode"
            >

        </com.hbb20.CountryCodePicker>

        <EditText
            android:id="@+id/phone_edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/transparent"
            android:digits="0123456789"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:nextFocusForward="@+id/phone_edittext10"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="16sp" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
...
