...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/sub_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@android:color/transparent"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/hintedlainesansregular"
                    android:nextFocusForward="@+id/msg_edittext"
                    android:nextFocusDown="@+id/spinner_pri"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="16sp" />
            </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
...
                <Spinner
                    android:id="@+id/spinner_pri"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:nextFocusForward="@+id/spinner_help"
                    android:entries="@array/spinnerAssignTo"
                    android:hint="@string/SelectPriority"/>
            </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
...
