...
                    android:text="HELP TOPICS"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_help_topics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/edittext_modified_states"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/spinnerHelpTopics"
...
                    android:imeOptions="actionNext"
                    android:paddingBottom="24dp"
                    android:paddingTop="24dp"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/button_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="44dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/faveo"
...
