<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:padding="16dp"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        tools:context="com.android.faveo.CreateNewTicketActivity">

        <!--<TextView-->
        <!--android:id="@+id/textView_ticket_number"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="24dp"-->
        <!--android:gravity="center"-->
        <!--android:maxLines="1"-->
        <!--android:paddingTop="8dp"-->
        <!--android:text="Ticket Number"-->
        <!--android:textCursorDrawable="@drawable/color_cursor"-->
        <!--android:textSize="14sp"-->
        <!--android:textStyle="bold" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.3"
            android:text="@string/subject"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_modified_states"
            android:cursorVisible="true"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/not_available"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_error_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="12dp"
            android:textColor="@color/error_red"
            android:textSize="12sp" />

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:alpha="0.3"-->
        <!--android:text="@string/sla_plans"-->
        <!--android:textColor="@color/black"-->
        <!--android:textSize="14sp"-->
        <!--android:textStyle="bold" />-->

        <!--<Spinner-->
        <!--android:id="@+id/spinner_sla_plans"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="24dp"-->
        <!--android:background="@drawable/edittext_modified_states"-->
        <!--android:entries="@array/spinnerSlaPlans"-->
        <!--android:imeOptions="actionNext"-->
        <!--android:maxLines="1"-->
        <!--android:paddingBottom="24dp"-->
        <!--android:paddingTop="24dp"-->
        <!--android:textSize="14sp" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:alpha="0.3"-->
        <!--android:text="@string/status"-->
        <!--android:textColor="@color/black"-->
        <!--android:textSize="14sp"-->
        <!--android:textStyle="bold" />-->

        <!--<Spinner-->
        <!--android:id="@+id/spinner_status"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="24dp"-->
        <!--android:background="@drawable/edittext_modified_states"-->
        <!--android:entries="@array/spinnerPriority"-->
        <!--android:imeOptions="actionNext"-->
        <!--android:maxLines="1"-->
        <!--android:paddingBottom="24dp"-->
        <!--android:paddingTop="24dp"-->
        <!--android:textSize="14sp" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.3"
            android:text="@string/priority"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/edittext_modified_states"
            android:entries="@array/spinnerPriority"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.3"
            android:text="@string/ticket_type"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/edittext_modified_states"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_helpTopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.3"
            android:text="@string/helptopic"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_help_topics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/edittext_modified_states"
            android:entries="@array/spinnerHelpTopics"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.3"
            android:text="@string/assignedto"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_staffs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/edittext_modified_states"
            android:text="@string/assignedto"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            android:textSize="14sp" />


        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:alpha="0.3"-->
        <!--android:text="@string/last_name"-->
        <!--android:textColor="@color/black"-->
        <!--android:textSize="14sp"-->
        <!--android:textStyle="bold" />-->

        <!--<EditText-->
        <!--android:id="@+id/editText_ticketDetail_lastname"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="24dp"-->
        <!--android:background="@drawable/edittext_modified_states"-->
        <!--android:clickable="false"-->
        <!--android:cursorVisible="false"-->
        <!--android:ems="10"-->
        <!--android:focusable="false"-->
        <!--android:focusableInTouchMode="false"-->
        <!--android:imeOptions="actionNext"-->
        <!--android:maxLines="1"-->
        <!--android:paddingBottom="16dp"-->
        <!--android:paddingTop="16dp"-->
        <!--android:text="@string/not_available"-->
        <!--android:textCursorDrawable="@drawable/color_cursor"-->
        <!--android:textSize="14sp" />-->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.3"
            android:text="@string/source"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/edittext_modified_states"
            android:entries="@array/spinnerHelpTopics"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            android:textSize="14sp" />

        <!--<TextView-->
        <!--android:textColor="@color/black"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="14sp"-->
        <!--android:text="LAST MESSAGE"-->
        <!--android:textStyle="bold"-->
        <!--android:alpha="0.3"/>-->

        <!--<EditText-->
        <!--android:textCursorDrawable="@drawable/color_cursor"-->
        <!--android:text="Last message"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:maxLength="20"-->
        <!--android:ems="10"-->
        <!--android:id="@+id/editText_last_message"-->
        <!--android:background="@drawable/edittext_modified_states"-->
        <!--android:textSize="14sp"-->
        <!--android:paddingTop="16dp"-->
        <!--android:paddingBottom="16dp"-->
        <!--android:layout_marginBottom="24dp"-->
        <!--android:singleLine="true"-->
        <!--android:clickable="false"-->
        <!--android:cursorVisible="false"-->
        <!--android:focusable="false"-->
        <!--android:focusableInTouchMode="false"-->
        <!--android:imeOptions="actionNext" />-->



        <Button
            android:id="@+id/button_save"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="56dp"
            android:background="@drawable/button_background"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>