...
        android:visibility="gone" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:clickable="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
...
            android:paddingRight="8dp"
            android:paddingTop="0dp"
            android:scrollbars="none"
            >

        <com.cooltechworks.views.shimmer.ShimmerRecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            app:demo_child_count="10"
            app:demo_layout="@layout/card_noti_shimmer"
            tools:context=".MainActivity"
            android:layoutAnimation="@anim/layout_animation_fall_down"
...
