...
                android:title="High"
                HTMLCode:showAsAction="ifRoom|withText" />
            <item android:id="@+id/helptopicnormal"
                android:title="Normal"
                HTMLCode:showAsAction="ifRoom|withText" />
            <item android:id="@+id/helptopiclow"
                android:title="Low"
                HTMLCode:showAsAction="ifRoom|withText" />
        </menu>
    </item>

    <item
        android:id="@+id/action_filtersource"
...
            xmlns:HTMLCode="http://schemas.android.com/apk/res-auto" >
            <item android:id="@+id/featurerequest"
                android:title="Feature request"
                HTMLCode:showAsAction="ifRoom|withText" />

            <item android:id="@+id/incident"
            android:title="Incident"
            HTMLCode:showAsAction="ifRoom|withText" />
            <item android:id="@+id/problem"
                android:title="Problem"
                HTMLCode:showAsAction="ifRoom|withText" />
            <item android:id="@+id/question"
                android:title="Question"
...
